# Telegram-Karaoke-Queue

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  ORIGINAL_REQUIREMENTS.md  README.md
.cursor/rules/: general.mdc
devlog/: 25.04.05.md
src/: cast.rs  main.rs  session.rs  youtube.rs
